# suika-game

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
.claude/commands/: finish.md  impl.md  understand-deep.md  understand.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  pbi.yml
app/assets/: Cargo.toml
app/assets/src/: lib.rs  sprites.rs
app/audio/: Cargo.toml
app/audio/src/: bgm.rs  channels.rs  config.rs  handles.rs  lib.rs  sfx.rs
app/audio/src/sfx/: game.rs  mod.rs  ui.rs
app/core/: Cargo.toml
app/core/src/: components.rs  config.rs  constants.rs  events.rs  fruit.rs  lib.rs  persistence.rs  resources.rs  states.rs
app/core/src/components/: container.rs  fruit.rs  mod.rs  ui.rs
app/core/src/config/: effects.rs  gameplay.rs  mod.rs
app/core/src/fruit/: mod.rs  params.rs  types.rs
app/core/src/resources/: combo.rs  game.rs  game_over.rs  mod.rs  settings.rs  spawn.rs  sprites.rs  weather.rs
app/core/src/shaders/: mod.rs
app/core/src/systems/: boundary.rs  collision.rs  container.rs  effects.rs  game_over.rs  input.rs  merge.rs  mod.rs  pause.rs  preview.rs  score.rs  spawn.rs
app/core/src/systems/boundary/: mod.rs
app/core/src/systems/collision/: mod.rs
app/core/src/systems/effects/: bounce.rs  cloud_effect.rs  droplet.rs  flash.rs  postprocess.rs  rain.rs  screen_droplet.rs  shake.rs  sun.rs  watermelon.rs
app/core/src/systems/game_over/: mod.rs
app/core/src/systems/input/: drop.rs  mod.rs  movement.rs  plugin.rs  resources.rs  (+1 more)
app/suika-game/: Cargo.toml
app/suika-game/assets/config/: audio.ron  fruits.ron  game_rules.ron  physics.ron
app/suika-game/assets/config/effects/: bounce.ron  droplet.ron  flash.ron  shake.ron  watermelon.ron
app/suika-game/assets/config/ui/hud/: best_score.ron  layout.ron  next.ron  score.ron  score_popup.ron
app/suika-game/assets/shaders/: cloud_puff.wgsl  radial_gradient.wgsl  rain_drop.wgsl  screen_droplet.wgsl  soft_circle.wgsl  sun.wgsl  weather_postprocess.wgsl
app/suika-game/src/: camera.rs  container.rs  debug.rs  main.rs
app/suika-game/tests/: integration_test.rs
app/ui/: Cargo.toml
app/ui/src/: camera.rs  components.rs  config.rs  i18n.rs  lib.rs  styles.rs
app/ui/src/screens/: game_over.rs  how_to_play.rs  mod.rs  pause.rs  settings.rs  title.rs
docs/: 01_specification.md  02_architecture.md  03_physics_rendering.md  04_ui_ux.md  05_audio.md  06_implementation_plan.md  07_project_structure.md  08_crate_architecture.md  09_quick_reference.md  10_advanced_topics.md
docs/roadmap/: README.md  phase-01.md  phase-02.md  phase-03.md  phase-04.md  phase-05.md  phase-06.md  phase-07.md  phase-08.md  phase-09.md  phase-10.md  phase-11.md
(+15 files in other folders)
